--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
     <string name="app_name">Moimi</string>
+
+    <string name="desc_logo">홈 로고</string>
+    <string name="desc_notification">알림</string>
+    <string name="desc_menu">메뉴</string>
+
+    <string name="label_start_point">출발지</string>
+    <string name="label_end_point">도착지</string>
+    <string name="btn_route_summary">경로 요약</string>
+
+    <string name="label_walk">도보</string>
+    <string name="label_transit">대중교통</string>
+    <string name="label_taxi">택시</string>
+
+    <string name="default_time">-</string>
+    <string name="calculating">계산중...</string>
 </resources>
